--- a/scss/_variables-and-mixins.scss
+++ b/scss/_variables-and-mixins.scss
@@ -39,3 +39,14 @@ $desktop: 1000px;
   from {transform: rotate(0deg);}
   to {transform: rotate(-360deg);}
 }
+
+// @keyframes appear {
+//   from {
+//     opacity: 0;
+//     transform: scale(0.5);
+//   }
+//   to {
+//     opacity: 1;
+//     transform: scale(1);
+//   }
+// }
