--- a/scss/more-projects.scss
+++ b/scss/more-projects.scss
@@ -25,6 +25,112 @@ header {
 
 
 
+#comments {
+  padding: 50px 10%;
+  background-color: #000;
+  color: #fff;
+
+  h2 {
+    margin-bottom: 20px;
+    font-size: 2rem;
+  }
+
+  form {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    max-width: 600px;
+
+    div {
+      display: flex;
+      flex-direction: column;
+
+      label {
+        margin-bottom: 5px;
+        font-weight: bold;
+      }
+
+      input, textarea {
+        padding: 10px;
+        background-color: #141414;
+        color: #fff;
+        border: 1px solid #636363;
+        border-radius: 5px;
+        font-family: inherit;
+
+        &:focus {
+          outline: none;
+          border-color: #fff;
+        }
+
+        &.error {
+          border-color: #ff6b6b;
+        }
+      }
+
+      textarea {
+        resize: vertical;
+        min-height: 100px;
+      }
+    }
+
+    .error-message {
+      color: #ff6b6b;
+      font-size: 0.8rem;
+      margin-top: 5px;
+      display: none;
+
+      &.show {
+        display: block;
+      }
+    }
+
+    button {
+      padding: 12px;
+      background-color: #fff;
+      color: #000;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 1rem;
+      font-weight: bold;
+      transition: background-color 0.3s;
+
+      &:hover {
+        background-color: #e0e0e0;
+      }
+    }
+  }
+
+  #comments-list {
+    margin-top: 30px;
+
+    .comment {
+      background-color: #141414;
+      padding: 15px;
+      margin-bottom: 15px;
+      border-radius: 5px;
+
+      .comment-author {
+        font-weight: bold;
+        margin-bottom: 5px;
+      }
+
+      .comment-date {
+        font-size: 0.8rem;
+        color: #636363;
+        margin-bottom: 10px;
+      }
+
+      .comment-text {
+        line-height: 1.5;
+      }
+    }
+  }
+}
+
+
+
 footer {
   display: grid;
   grid-template-columns: repeat(auto-fit,minmax(50px, 100px));
